Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128450

Container::max_size() should not be static functions

XMLWordPrintable

    • 1
    • 6d5e39f47 (dev), 6306ebe74 (dev), 6c15f9985 (dev), 0396def8a (6.8), cb35f1e85 (6.8), 6978951d5 (6.8), 362d6b4c3 (dev), 701a957fa (6.8)
    • Foundation Sprint 115

      qtbase/7ce6920aacfcba485cd8017e01c6aeb324292e75 added max_size() for

      • QList
      • QVLA
      • QString
      • QByteArray

      as static methods. But https://eel.is/c++draft/container.reqmts#lib:max_size,containers clearly states c.max_size(), not X::max_size(), so static is wrong (compilers may warn about calling a static function using dot notation).

      Acceptance criteria:

      • above information is verified and the functions are made normal member functions instead

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: